# Datalake-house

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
apache-iceberg/: index.html
delta-lake/: index.html
docs/: apache-iceberg.md  delta-lake.md  index.md  pesquisa.md
notebooks/: delta_iceberg_comparison.ipynb  delta_lake_operations.ipynb  iceberg_operations.ipynb
pesquisa/: index.html
site/: 404.html  index.html  search.html
site/apache-iceberg/: index.html
site/delta-lake/: index.html
site/pesquisa/: index.html
site/search/: search_index.json
src/spark_delta_iceberg/: __init__.py  delta_operations.py  iceberg_operations.py  jupyter_setup.py  sample_data.py  spark_session.py
